feat: all file volume

--- a/sh/docker-compose/Dockerfile
+++ b/sh/docker-compose/Dockerfile
@@ -1,10 +1,7 @@
 FROM ubuntu:latest
 
+VOLUME /leanote
+
 WORKDIR /leanote
-
-COPY . ./
-
-VOLUME /leanote/files
-VOLUME /leanote/public/upload
 
 ENTRYPOINT ["./bin/run.sh"]
